# tune

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: config.rs  http.rs  lib.rs  lyric.rs  lyrics.rs  main.rs  video.rs
src/search/: config.rs  mod.rs  request.rs
tests/: lyric_test.rs  test_search_lyrics.rs  test_search_videos.rs
tests/resources/: genius-response.json  youtube-response.json
