[package]
name = "tune"
version = "0.2.2"
authors = ["Tahir Bulbrook <t@hir.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
url = "2.1"
htmlescape = "0.3"

[dev-dependencies]
mockito = "0.25"